manifests/3-ingress/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-expose-internet
  labels:
    tortue: geniale
spec:
  containers:
  - image: swoutch/echo-flask
    name: echo-container
    imagePullPolicy: Always
