manifests/3-ingress/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-expose-internet
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
  selector:
    tortue: geniale
